--- a/templates/index.html
+++ b/templates/index.html
@@ -30,26 +30,32 @@
             .section-gradient {
               margin-top: -40px;
             }
+            .hero-content{
+                display:flex;
+                justify-content:center;
+            }
+
         </style>
 
     </head>
     <body>
         <!-- Header with image logo -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#"><img src="logo.png" alt="logo"></a>
+          <a class="navbar-brand" href="#"><img src="https://i.ibb.co/FKjPg8t/Subtract.png" height="50px" width="50px" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="#">Bosh sahifa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Biz haqimizda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contents</a>
+                <a class="nav-link" href="#">Bog'lanish</a>
               </li>
             </ul>
           </div>
@@ -57,8 +63,8 @@
         <!-- Hero with image and title -->
         <section class="jumbotron jumbotron-fluid">
           <div class="container hero-content">
-            <h1 class="display-4">My Hero</h1>
-            <img src="hero.png" alt="hero" class="img-fluid">
+
+            <img src="https://i.ibb.co/z4YQYRf/Group-7.png" width="400px"  alt="hero" >
           </div>
         </section>
         <!-- Section with title and description in center and gradient -->
@@ -69,8 +75,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h2>My Section Title</h2>
-                        <p>Description of my section</p>
+                        <h2>Qanday qilib bizning xizmatimiz qiyin g'oyalarni tushunishni osonlashtiradi</h2>
+                        <p>Bizning xizmatimiz murakkab til va g‘oyalarni soddaroq, tushunarliroq tilga ajratish orqali matnlarni soddalashtiradi. Biz matnlarni tahlil qilish va to‘g‘ridan-to‘g‘ri ifodalanishi yoki tushuntirilishi mumkin bo‘lgan sohalarni aniqlash uchun ilg‘or sun’iy intellekt algoritmlaridan foydalanamiz. Bizning maqsadimiz odamlarga ish, o'qish yoki shaxsiy qiziqish uchun o'qish uchun yozma materiallarni tushunish va ular bilan shug'ullanishni osonlashtirishdir. Bizning xizmatimiz yordamida siz zich, jargonli matnlarni kengroq auditoriya uchun ochiq bo'lgan aniq va ixcham tilga osongina o'zgartirishingiz mumkin. Siz talaba bo'lasizmi, professionalmisiz yoki shunchaki qiyin matnlarni tushunishni xohlaydigan odamsiz, bizning xizmatimiz sizga muvaffaqiyatga erishishda yordam beradi.</p>
                     </div>
                 </div>
             </div>
@@ -89,23 +95,23 @@
 
                             <!-- Text area -->
                             <div class="col-md-6">
-                                <h3>Input Text</h3>
+                                <h3>Matn kiritish</h3>
                                 <div class="form-group">
-                                    <textarea class="form-control" rows="5" id="textarea" name="input_area"></textarea>
+                                    <textarea class="form-control" rows="5" id="textarea" name="input_area">{{ data_input }}</textarea>
                                 </div>
                             </div>
                             <!-- Output text -->
                             <div class="col-md-6">
-                                <h3>Output Text</h3>
+                                <h3>Matnni chiqarish</h3>
                                 <div class="form-group">
-                                    <textarea class="form-control" rows="5" id="textarea-output" disabled>{{data}}</textarea>
+                                    <textarea class="form-control" rows="5" id="textarea-output" disabled>{{data_output}}</textarea>
                                 </div>
                             </div>
                             <!-- Dropdown and Submit button -->
                             <div class="col-12 text-center">
                                 <br>
                                 <div class="form-group">
-                                    <button class="btn btn-primary" type="submit" id="submit">Submit</button>
+                                    <button class="btn btn-primary" type="submit" id="submit">Yuborish</button>
                                 </div>
                             </div>
 
@@ -116,60 +122,60 @@
             <br>
             <br>
         </section>
-        <!-- Comments section -->
-        <!-- Comments section -->
-<section class="comments-section">
-  <br>
-  <br>
-  <br>
-    <!-- Comments section -->
-    <section class="comments-section">
-      <br>
-      <br>
-      <br>
-      <div class="container">
-        <h3>Comments</h3>
-        <div class="comments">
-          <div class="comments-slider">
-            <div>
-              <p>Comment 1</p>
-              <p>Author: John</p>
-            </div>
-            <div>
-              <p>Comment 2</p>
-              <p>Author: Jane</p>
-            </div>
-            <div>
-              <p>Comment 3</p>
-              <p>Author: Bob</p>
-            </div>
-            <div>
-              <p>Comment 4</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
+<!--        &lt;!&ndash; Comments section &ndash;&gt;-->
+<!--<section class="comments-section">-->
+<!--  <br>-->
+<!--  <br>-->
+<!--  <br>-->
+<!--    &lt;!&ndash; Comments section &ndash;&gt;-->
+<!--    <section class="comments-section">-->
+<!--      <br>-->
+<!--      <br>-->
+<!--      <br>-->
+<!--      <div class="container">-->
+<!--        <h3>Comments</h3>-->
+<!--        <div class="comments">-->
+<!--          <div class="comments-slider">-->
+<!--            <div>-->
+<!--              <p>Comment 1</p>-->
+<!--              <p>Author: John</p>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--              <p>Comment 2</p>-->
+<!--              <p>Author: Jane</p>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--              <p>Comment 3</p>-->
+<!--              <p>Author: Bob</p>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--              <p>Comment 4</p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>-->
         <!-- Footer with links like in header, Developer and copyrights -->
         <footer class="bg-dark text-white p-3">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <h5>My Links</h5>
+                        <h5>Mening havolalarim</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contents</a></li>
+                            <li><a href="#">Bosh sahifa</a></li>
+                            <li><a href="#">Biz haqimizda</a></li>
+                            <li><a href="#">Bog'lanish</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <h5>Developer</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#">My Github</a></li>
+                            <li><a href="https://github.com/icebergD/UzNlp">Github</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <p>&copy; My Copyrights</p>
+                        <p>&copy; My Copyrights 2022</p>
                     </div>
                 </div>
             </div>
